# artifacts/api-server/src/routes/index.ts
@@ -13,6 +13,7 @@ import volunteersRouter from "./volunteers";
 import faqRouter from "./faq";
 import leadershipRouter from "./leadership";
 import authRouter from "./auth";
+import referralsRouter from "./referrals";
 
 const router: IRouter = Router();
 
@@ -30,5 +31,6 @@ router.use(volunteersRouter);
 router.use(faqRouter);
 router.use(leadershipRouter);
 router.use(authRouter);
+router.use(referralsRouter);
 
 export default router;
