# lib/db/src/schema/index.ts
@@ -10,3 +10,4 @@ export * from "./volunteers";
 export * from "./faq";
 export * from "./leadership";
 export * from "./users";
+export * from "./referrals";
